# aoc2024

./: .gitignore  Cargo.toml  README.md  justfile  main_template.rs  rust-toolchain.toml
.github/workflows/: rust.yml
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
santas_little_helpers/: Cargo.toml
santas_little_helpers/src/: lib.rs
src/: cli.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  error.rs  lib.rs  main.rs
