[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
once_cell = "1.20.2"
regex = { version = "1.11.1", features = ["pattern"] }
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
